# claude-code-python

./: .env.example  .gitignore  AGENTS.md  CHANGE.md  CHANGELOG.md  Dockerfile  README.md  README_EN.md  RELEASE_NOTES.md  buildkitd.toml  cc-py.spec  debug_query.py  debug_tui.py  diagnose_api.py  package.json  pyproject.toml  test_tui.py
.github/workflows/: release.yml
cc_code/: __init__.py  __main__.py  cli.py
cc_code/api/: __init__.py  cli.py  server.py
cc_code/client/: __init__.py  http_client.py
cc_code/core/: __init__.py  compaction.py  context_window.py  file_expansion.py  instruction.py  messages.py  prompts.py  query_engine.py  revert.py  session_store.py  settings.py  snapshot.py  tools.py
cc_code/services/: __init__.py  openai_client.py
cc_code/skills/: __init__.py  bundled.py  loader.py
cc_code/tools/: __init__.py  bash_tool.py  edit_tool.py  glob_tool.py  grep_tool.py  read_tool.py  ripgrep.py  skill_tool.py  write_tool.py
cc_code/ui/: __init__.py  app.py  autocomplete.py  debug_modal.py  message_widgets.py  model_select_modal.py  patched_markdown.py  rewind_modal.py  screens.py  session_resume_modal.py  streaming_markdown.py  styles.py  transcript_mode_modal.py  utils.py  widgets.py
cc_code/utils/: logging_config.py
cc_code/web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
claude_code/: __init__.py  __main__.py  cli.py
claude_code/api/: __init__.py  cli.py  server.py
docs/: INSTRUCTION_LOADING.md  REFACTORING_SUMMARY.md  deepseek-v4-pro-evaluation.md  high-performance-markdown.md  read-tool-comparison-brief.md  read-tool-comparison.md  system_prompt_chinese_translation.md  widget-tree.md
scripts/: generate_proto.py
tests/: test_bash_tool_output.py  test_cli.py  test_compaction.py  test_core.py  test_http_client_compact_streaming.py  test_http_client_debug_state.py  test_instruction.py  test_logging_config.py  test_openai_client_reasoning_content.py  test_query_engine_debug_state.py  test_query_engine_switch_model.py  test_settings.py  test_snapshot_path_scoped_tracking.py  test_snapshot_session_isolation.py  test_tool_definitions.py  test_tool_result_log_widget.py  test_tui.py  test_ui_app.py  test_ui_autocomplete.py  test_ui_debug_command.py  test_ui_debug_modal.py  test_ui_input_shortcuts.py  test_ui_markdown_spacing.py  test_ui_session_restore_autofollow.py  test_ui_streaming_markdown_layout.py  test_ui_tool_result_scroll_lock.py  test_web_frontend_source.py  test_web_server.py
(+79 files in other folders)
