[project]
name = "claude-code-python"
version = "0.2.0"
description = "Python port of Claude Code - AI programming assistant with gRPC frontend/backend separation"
requires-python = ">=3.12"
authors = [
    { name = "Claude Code Python Port" }
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
    "httpx[http2]>=0.26.0",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
claude-code-python = "claude_code.cli:main"
cc-py = "claude_code.cli:main"
cc-server = "claude_code.server.cli:main"
cc-client = "claude_code.client.cli:main"
cc-web = "claude_code.web.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_code"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
